--- a/WebContent/CartStyle.css
+++ b/WebContent/CartStyle.css
@@ -1,47 +1,87 @@
 body {
-background-color: #eef4ed;
-font-family: Arial, sans-serif;
-font-size: 16px;
-line-height: 1.5;
-}
+    background-color: #eef4ed;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    }
 
-.cart {
-  margin-top: 50px;
-}
+    .titolo{
+      height:80px;
+      width:100%;
+      background-color:#0B2545;
+      border-radius:3px;
+      margin:30px 0px;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      padding:15px;
+    }
+  
+    .titolo	.nomeSito{
+      font-size:30px;
+      font-weight:bold;
+      color:white;
+    } 
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
+    a:link, a:visited {
+      background-color: goldenrod;
+      color: white;
+      padding: 7px 25px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      }
+      
+      a:hover, a:active {
+      background-color: #333;
+      }
 
-th, td {
-  padding: 10px;
-  text-align: left;
-  border-bottom: 1px solid #ddd;
-}
 
-th {
-  background-color: #f2f2f2;
-}
 
-th:last-child, td:last-child {
-  text-align: right;
-}
 
-.total-price {
-  font-weight: bold;
-}
 
-.checkout-btn {
-  margin-top: 20px;
-  padding: 10px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
 
-.checkout-btn:hover {
-  background-color: #0062cc;
-}
+
+
+
+
+    .cart {
+      margin-top: 50px;
+    }
+    
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+    
+    th, td {
+      padding: 10px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+    }
+    
+    th {
+      background-color: #f2f2f2;
+    }
+    
+    th:last-child, td:last-child {
+      text-align: left;
+    }
+    
+    .total-price {
+      font-weight: bold;
+    }
+    
+    .checkout-btn {
+      margin-top: 20px;
+      padding: 10px;
+      background-color: goldenrod;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    
+    .checkout-btn:hover {
+      background-color: #333;
+    }
