--- a/WebContent/ProductStyle.css
+++ b/WebContent/ProductStyle.css
@@ -1,84 +1,137 @@
-body {
-background-color: #eef4ed;
-font-family: Arial, sans-serif;
-font-size: 16px;
-line-height: 1.5;
+*{
+	backgound:#0B2545;
+	margin:0;
+	padding:0;
+	box-sizing:border-box;
+	font-family: 'poppins', sans-serif;
+	font-size:18px;
 }
 
-#header {
-background-color: #fff;
-padding: 20px;
+
+body{
+	background-color: #eef4ed;
+	display:flex;
+	align-items:center;
+	justify-content:center;
+	flex-direction:column;
 }
 
-#header h1 {
-font-size: 32px;
-margin: 0;
+.titolo{
+	height:100px;
+	width:100%;
+	background-color:#0B2545;
+	border-radius:3px;
+	margin:5px 0px;
+	display:flex;
+	align-items:center;
+	justify-content:space-between;
+	padding:15px;
 }
 
-#header form {
-display: inline-block;
-margin-top: 10px;
+.titolo	.nomeSito{
+	font-size:30px;
+	font-weight:bold;
+	color:white;
 }
 
-#header input[type="search"] {
-border: none;
-border-radius: 5px;
-padding: 10px;
+.cart{
+	display:flex;
+	background-color:#0B2545;
+	justify-content:space-between;
+	align-items: center;
+	padding:25px 10px;  
+	border-radius:3px;
+	width:60px;
+	position: relative;
+    margin-right: 100px;
 }
 
-#header button[type="submit"] {
-background-color: #3b3b3b;
-border: none;
-border-radius: 5px;
-color: #fff;
-padding: 10px 15px;
-margin-left: 10px;
+
+table{
+	width:100%;
+	
 }
 
-#content {
-display: flex;
-flex-wrap: wrap;
-margin: 20px;
+
+th, td {
+  border-bottom: 1px solid #ddd;
+  text-align:center;
 }
 
-.product {
-background-color: #fff;
-border-radius: 5px;
-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-margin: 10px;
-padding: 20px;
-text-align: center;
-width: calc(33.33% - 20px);
+
+
+
+
+.box{
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+	justify-content:space-between;
+	border:1px solid goldenrod;
+	border-radius:5px;
+	padding:15px;
 }
 
-.product img {
-width: 150px;
-height: 150px;
-}
-.product h2 {
-font-size: 24px;
-margin: 10px 0;
-}
-
-.product p {
-font-size: 16px;
-margin: 10px 0;
+.img-box{
+	width:100%;
+	height:180px;
+	display:flex;
+	align-items:center;
+	justify-content:center;
 }
 
-.product button {
-background-color: #3b3b3b;
-border: none;
-border-radius: 5px;
-color: #fff;
-padding: 10px 15px;
-margin-top: 10px;
+.images{
+	max-width:90%;
+	max-height:90%;
+	object-fit:cover;
+	object-position:center;
 }
 
-.product button:not(:last-child) {
-margin-right: 10px;
+.bottom{
+	margin-top:20px;
+	width:100%;
+	text-align:center;
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+	justify-content:space-between;
+	height:110px;
 }
 
-.product button:hover {
-cursor: pointer;
-background-color: #4f4f4f;
+h2{
+	font-size:20px;
+	color:red;
 }
+
+button{
+	width:100%;
+	position:relative;
+	border:none;
+	border-radius:5px;
+	background-color:goldenrod;
+	padding:7px 25px;
+	cursor:pointer;
+	color:white;
+	
+}
+
+button:hover{
+	background-color:#333;
+}
+
+a:link, a:visited {
+	background-color: goldenrod;
+	color: white;
+	padding: 7px 25px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+  }
+  
+a:hover, a:active {
+  background-color: black;
+}
+
+
+
+
