--- a/WebContent/RegistrationStyle.css
+++ b/WebContent/RegistrationStyle.css
@@ -1,6 +1,92 @@
-body {
-background-color: #eef4ed;
-font-family: Arial, sans-serif;
-font-size: 16px;
-line-height: 1.5;
+*{
+    margin:0;
+    padding:0;
+}
+
+body{
+    background-color: #EEF4ED;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    font-family: sans-serif;
+}
+
+.container{
+    position: relative;
+    margin-top: 100px;
+    width: 450px;
+    height: auto;
+    background: #dedede;
+    border-radius: 5px;
+}
+
+.label{
+    padding:20px 130px;
+    font-size: 30px;
+    font-weight: bold;
+    color: #130f40; 
+}
+
+.login_form{
+    padding:20px 40px;
+}
+
+.login_form .font{
+    font-size:18px;
+    color:#130f40;
+    margin: 5px 0;
+}
+
+.login_form input{
+    height:40px;
+    width: 350px;
+    padding: 0 5px;
+    font-size: 18px;
+    outline: none;
+    border:1px solid silver;
+}
+
+.login_form .font2{
+    margin-top: 30px;
+}
+
+.login_form button{
+    margin: 45px 0 30px 0;
+    height: 45px;
+    width: 365px;
+    font-size: 20px;
+    color: white;
+    outline: none;
+    cursor: pointer;
+    font-weight: bold;
+    background: #1A237E;
+    border-radius: 3px;
+    border: 1px solid #3949AB;
+    transition: .5s;
+}
+
+.login_form button:hover{
+    background: #3d427b;
+}
+
+
+.login_form 
+#email_error1, #email_error2,
+#nome_error1, #nome_error2, 
+#cognome_error1, #cognome_error2,
+#indirizzo_error1, #indirizzo_error2,
+#citta_error1, #citta_error2,
+#provincia_error1, #provincia_error2,
+#cap_error1, #cap_error2,
+#password_error1{
+    margin-top: 5px;
+    width:333px;
+    font-size:18px;
+    color:#C62828;
+    background-color: rgba(255,0,0,0.1);
+    text-align: center;
+    padding:5px 8px;
+    border-radius: 3px;
+    border:1px solid #EF9A9A;
+    display: none;
 }
